@@ -230,11 +230,10 @@ double  wt;
 {
 	register int  i;
 					/* set number of divisions */
-	if (wt < (.25*PI)/ambdiv+FTINY) {
-		hp->nt = hp->np = 0;
-		return;			/* zero samples */
-	}
 	hp->nt = sqrt(ambdiv * wt / PI) + 0.5;
+	i = ambacc > FTINY ? 3 : 1;	/* minimum number of samples */
+	if (hp->nt < i)
+		hp->nt = i;
 	hp->np = PI * hp->nt + 0.5;
 					/* make axes */
 	VCOPY(hp->uz, r->ron);
